Wordpress/Wordpress-Ingress/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:5.5.3-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - mountPath: "/var/www/html" 
          name: wordpress-pv
      volumes:
      - name: wordpress-pv
        persistentVolumeClaim:
          claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
 name: wordpress
#  annotations:
#    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
 type: ClusterIP
 ports:
 - port: 80
 selector:
   app: wordpress
